розбивка на компоненти
розбивка на компоненти

--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,25 @@
-.App {
-  text-align: center;
-}
+.app-wrapper{
+  display: grid;
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
+grid-template-areas: 
+"h h"
+"n c";
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+  grid-template-rows: 60px 1fr;
+  grid-template-columns: 2fr 10fr;
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+header{
+grid-area: h;
+background-color: rgb(60, 193, 234);
 }
-
-.App-link {
-  color: #61dafb;
+header img{
+  width: 50px;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+nav{
+grid-area: n;
+background-color: rgb(149, 234, 207);
+}
+.content{
+grid-area: c;
+background-color: rgb(218, 236, 118);
 }
