--- a/src/components/Profile/MyPost/Post/Post.module.css
+++ b/src/components/Profile/MyPost/Post/Post.module.css
@@ -1,9 +1,13 @@
 
   .items{
-   color: rgb(33, 54, 2);
+   color: rgb(70, 108, 13);
   }
-.items img{
+.littleAva{
   width: 50px;
   height: 50px;
   border-radius: 30px;
+}
+.imgLike{
+  width: 15px;
+  font-size: 15px;
 }
