--- a/src/App.css
+++ b/src/App.css
@@ -9,3 +9,8 @@ grid-template-areas:
   grid-template-rows: 60px 1fr;
   grid-template-columns: 2fr 10fr;
 }
+
+.content{
+  grid-area: c;
+  background-color: rgb(218, 236, 118);
+  }
