route and routes
використання маршрутизації з допомогою route і routes обовязково дописувати в імпорт routes , в уроці стара версія тому є трішки зміни. в цьому коміті їх видно

--- a/src/App.css
+++ b/src/App.css
@@ -10,7 +10,7 @@ grid-template-areas:
   grid-template-columns: 2fr 10fr;
 }
 
-.content{
+.app-wrapper-content{
   grid-area: c;
   background-color: rgb(218, 236, 118);
   }
