--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,7 @@
 .app-wrapper{
   display: grid;
-  width: 1200px;
+  width: 100%;
+  height: 100%;
 
 grid-template-areas: 
 "h h"
@@ -12,5 +13,5 @@ grid-template-areas:
 
 .app-wrapper-content{
   grid-area: c;
-  background-color: rgb(218, 236, 118);
+  background-color:rgb(255, 255, 255);
   }
