--- a/src/components/Dialogs/Dialogs.module.css
+++ b/src/components/Dialogs/Dialogs.module.css
@@ -7,6 +7,8 @@
     padding: 10px;
     display: flex;
     flex-direction: column;
+    margin: 10px;
+    border-right: 1px lightgray solid;
 }
 
 .dialogsItem .active {
@@ -15,11 +17,30 @@
 
 .messages {
     padding: 10px;
+    width: 50%;
+    
 
 }
 
 .message {
-    border:1px solid darkgrey;
+   background-color: lightgray;
     border-radius: 5px;
     padding: 10px;
+    margin: 10px;
+    height: 60px;
+}
+.messageAva{
+    width: 50px;
+    border-radius:25px;
+}
+.avaName{
+display: inline-flex;   
+align-items: center; 
+
+}
+.littleAvatar{
+    width: 25px;
+    height: 25px;
+    border-radius: 30px;
+
 }
